force-app/main/default/objects/custom_create296__c/custom_create296__c.object-meta.xml
<CustomObject>
    <label>Custom created object296</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects296</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>