force-app/main/default/objects/custom_create296__c/fields/custom_create_296field501__c.field-meta.xml
<CustomField>
    <fullName>custom_create_296field501__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 296field501</label>
    <type>Checkbox</type>
</CustomField>