force-app/main/default/objects/custom_create296__c/fields/custom_create_296field543__c.field-meta.xml
<CustomField>
    <fullName>custom_create_296field543__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 296field543</label>
    <type>Checkbox</type>
</CustomField>